Fixed errors with API
