# doc/api.yaml
@@ -314,24 +314,7 @@ components:
         - last_sent
   
 security:
-  - bearerAuth:
-    - createConversation
-    - getConversation
-    - setGroupDescription
-    - setGroupName
-    - setGroupPhoto
-    - addToGroup
-    - leaveGroup
-    - commentMessage
-    - uncommentMessage
-    - sendMessage
-    - forwardMessage
-    - deleteMessage
-    - setMyBio
-    - getMyConversations
-    - setMyUserName
-    - setMyDisplayName
-    - setMyPhoto
+  - bearerAuth: []
 
 paths:
   /session:
@@ -404,6 +387,8 @@ paths:
       summary: Get the chats of the user
       description: Get the chats of the user specified in the user ID
       operationId: getMyConversations
+      security:
+        - bearerAuth: []
 
       responses:
         "200":
@@ -424,7 +409,15 @@ paths:
                     maxItems: 4294967296
                 required: 
                   - user_chats
-        
+
+        '401':
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Chat"
+
         '404':
           description: |
             The chat does not exist
@@ -443,6 +436,8 @@ paths:
       summary: Change the username of the user
       description: Changes the username of the user specified by the ID in the path
       operationId: setMyUserName
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: New username
         content:
@@ -465,6 +460,14 @@ paths:
           description: |
             The username has been changed successfully
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
         "418":
           description: |
             The username wasn't changed due to an error
@@ -483,6 +486,8 @@ paths:
       summary: Change the display name of the user
       description: Changes the display name of the user specified by the ID in the path
       operationId: setMyDisplayName
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: New display name
         content:
@@ -503,6 +508,15 @@ paths:
         "204":
           description: |
             The display name has been changed successfully
+
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
         "418":
           description: |
             The display name wasn't changed due to an error
@@ -521,6 +535,8 @@ paths:
       summary: Changes the user's photo
       operationId: setMyPhoto
       description: Changes the user's photo
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The new photo of the user
         content:
@@ -541,10 +557,18 @@ paths:
         "204":
           description: |
             The photo ahs been changed successfully
+
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
         
         '403':
           description: |
-            You are not the user, you can't change someone else's photo
+            The new photo is not valid
           content:
             application/json:
               schema:
@@ -560,6 +584,8 @@ paths:
       summary: Change the bio of the user
       operationId: setMyBio
       description: Change the bio of the user
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The new biography
         content:
@@ -588,6 +614,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
   /chat:
     # PUT = createConversation
     put:
@@ -595,6 +629,8 @@ paths:
       summary: Create a conversation
       description: Creates a conversation, which may be either a group or a private chat
       operationId: createConversation
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: |
           The chat that must be created
@@ -656,6 +692,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Chat"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Chat"
+
 
   /chat/{chat_id}:
     # GET = getConversation
@@ -667,6 +711,8 @@ paths:
       summary: Get the chat
       description: Get the chat determined by the ID in the path
       operationId: getConversation
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: Chat successfully retrieven
@@ -678,6 +724,14 @@ paths:
         '400':
           description: |
             The specified chat_id is not valid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Chat"
+
+        "401":
+          description: |
+            Authorization error
           content:
             application/json:
               schema:
@@ -703,6 +757,8 @@ paths:
       summary: Add user to group
       operationId: addToGroup
       description: Adds a user to a group
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: |
           User to be added to the group
@@ -737,6 +793,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
         '404':
           description: |
             The user does not exist
@@ -756,6 +820,8 @@ paths:
       summary: Leave the group
       operationId: leaveGroup
       description: Leave the group
+      security:
+        - bearerAuth: [ ]
 
       responses:
         "200":
@@ -774,6 +840,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
   /chat/{chat_id}/name:
     parameters:
     - $ref: "#/components/parameters/chat_id"
@@ -784,6 +858,8 @@ paths:
       summary: Set the name of the group
       operationId: setGroupName
       description: Set the name of the group
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The name of the group
         content:
@@ -808,6 +884,14 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Chat"
+
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Chat"
         
         '404':
           description: |
@@ -827,6 +911,8 @@ paths:
       summary: Change the photo of the group
       operationId: setGroupPhoto
       description: Change the photo of the group
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The new photo of the group
         content:
@@ -860,6 +946,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Chat"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Chat"
+
   /chat/{chat_id}/description:
     parameters:
     - $ref: "#/components/parameters/chat_id"
@@ -870,6 +964,8 @@ paths:
       summary: Change the description of the group
       operationId: setGroupDescription
       description: Change the description of the group
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The new description of the group
         content:
@@ -903,6 +999,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Chat"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Chat"
+
   /message:
     # PUT = sendMessage
 
@@ -911,6 +1015,8 @@ paths:
       summary: Send a message to the chat
       operationId: sendMessage
       description: Sends a message to the chat given the messageId
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The message that must be sent
         content:
@@ -962,6 +1068,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Message"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+
         "418":
           description: |
             Couldn't send the message
@@ -981,6 +1095,8 @@ paths:
       summary: Delete a message from the chat
       operationId: deleteMessage
       description: Deletes a message from the chat, given the messageId
+      security:
+        - bearerAuth: [ ]
       responses:
         "200":
           description: |
@@ -998,11 +1114,21 @@ paths:
               schema:
                 $ref: "#/components/schemas/Message"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+
     post:
       tags: ["Chats"]
       summary: Forward a message to another chat
       description: Allows to forward a message to another chat
       operationId: forwardMessage
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The chat to which the message should be forwarded
         content:
@@ -1034,6 +1160,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Message"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+
         "403":
           description: |
             Can't forward to another chat. Are you part of it?
@@ -1050,6 +1184,8 @@ paths:
       summary: Comment a message
       operationId: commentMessage
       description: Comments a message, given a messageId
+      security:
+        - bearerAuth: [ ]
       requestBody:
         description: The comment to add
         content:
@@ -1095,6 +1231,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Reaction"
 
+        "401":
+          description: |
+            Authorization error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Reaction"
+
   /comment/{comment_id}:
     parameters:
       - $ref: "#/components/parameters/comment_id"
@@ -1105,6 +1249,8 @@ paths:
       summary: Remove a comment from a message
       description: Removes a comment from a message, given the commentId
       operationId: uncommentMessage
+      security:
+        - bearerAuth: [ ]
       responses:
         "204":
           description: |
@@ -1113,6 +1259,14 @@ paths:
         "400":
           description: |
             Couldn't delete the reaction. Are you part of the chat?
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Reaction"
+
+        "401":
+          description: |
+            Authorization error
           content:
             application/json:
               schema:
