# service/api/user-ops.go
@@ -6,6 +6,7 @@ import (
 	"errors"
 	"io"
 	"net/http"
+	"strings"
 
 	"github.com/julienschmidt/httprouter"
 )
@@ -49,6 +50,7 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 // The setMyUserName function changes the username of the user in the URI path
 func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	auth := r.Header.Get("Authorization")
+	auth = strings.TrimPrefix(auth, "Bearer ")
 	_, errAuth := rt.db.GetUserByName(auth)
 	if errAuth != nil {
 		w.WriteHeader(http.StatusUnauthorized)
@@ -73,9 +75,10 @@ func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps http
 	}
 }
 
-// The setMyUserName function changes the username of the user in the URI path
+// The setMyDisplayName function changes the display of the user in the URI path
 func (rt *_router) setMyDisplayName(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	auth := r.Header.Get("Authorization")
+	auth = strings.TrimPrefix(auth, "Bearer ")
 	_, errAuth := rt.db.GetUserByName(auth)
 	if errAuth != nil {
 		w.WriteHeader(http.StatusUnauthorized)
@@ -103,6 +106,7 @@ func (rt *_router) setMyDisplayName(w http.ResponseWriter, r *http.Request, ps h
 // setMyBio sets a new biography
 func (rt *_router) setMyBio(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	auth := r.Header.Get("Authorization")
+	auth = strings.TrimPrefix(auth, "Bearer ")
 	_, errAuth := rt.db.GetUserByName(auth)
 	if errAuth != nil {
 		w.WriteHeader(http.StatusUnauthorized)
@@ -130,6 +134,7 @@ func (rt *_router) setMyBio(w http.ResponseWriter, r *http.Request, ps httproute
 // setMyPhoto sets a new profile picture for the user
 func (rt *_router) setMyPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	auth := r.Header.Get("Authorization")
+	auth = strings.TrimPrefix(auth, "Bearer ")
 	_, errAuth := rt.db.GetUserByName(auth)
 	if errAuth != nil {
 		w.WriteHeader(http.StatusUnauthorized)
@@ -157,6 +162,7 @@ func (rt *_router) setMyPhoto(w http.ResponseWriter, r *http.Request, ps httprou
 // getMyConversations retrieves all the chats where the user belongs
 func (rt *_router) getMyConversations(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	auth := r.Header.Get("Authorization")
+	auth = strings.TrimPrefix(auth, "Bearer ")
 	_, errAuth := rt.db.GetUserByName(auth)
 	if errAuth != nil {
 		w.WriteHeader(http.StatusUnauthorized)
